@@ -372,6 +372,9 @@ Lintian-Tags: quilt-series-but-no-build-dep
 Fix-Script: unused-build-dependency-on-cdbs.py
 Lintian-Tags: unused-build-dependency-on-cdbs
 
+Fix-Script: typo-in-debhelper-override-target.py
+Lintian-Tags: typo-in-debhelper-override-target
+
 Fix-Script: debian-rules-uses-unnecessary-dh-argument.py
 Lintian-Tags: debian-rules-uses-unnecessary-dh-argument
 
