@@ -1,0 +1,7 @@
+#!/usr/bin/make -f
+
+%:
+	dh $*
+
+override_dh_instalman:
+	installman -pfoo
