@@ -2,6 +2,7 @@ lintian-brush (0.105) UNRELEASED; urgency=medium
 
   * Bump required debmutate.
   * Detect gbp-dch use in repositories with subdirectories.
+  * Add fixer typo-in-debhelper-override-target.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 30 Mar 2021 00:21:42 +0100
 
